--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,9 @@ name: Build Mod
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
@@ -19,17 +17,14 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: temurin
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: gradle build
 
       - name: Upload mod jar
         uses: actions/upload-artifact@v4
         with:
-          name: ShulkerTooltip
+          name: mod-jar
           path: build/libs/*.jar
